--- a/webui/package.json
+++ b/webui/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack & npx next-video sync -w",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.7",
@@ -27,6 +30,7 @@
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "next-video": "^2.5.0",
+    "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
