--- a/webui/package.json
+++ b/webui/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.4.6",
     "next-video": "^2.5.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
